--- a/vegan/index.html
+++ b/vegan/index.html
@@ -114,22 +114,36 @@ diferentes caras de una misma lógica supremacista. Y que nadie te engañe:
 Conscientemente o no, l@s no vegan@s, también llamad@s normales, 
 especistas o carnistas... forman
 parte de un sistema extremadamente violento. Ya sé que es terrible poner etiquetas
-de esta manera, catalogando a las personas cuando tod@s somos personas. 
+de esta manera, catalogando a las personas cuando tod@s somos simplemente eso, 
+personas. 
 Pero hay una gran diferencia entre una persona muy violenta y otra que lo es mucho
 menos. Al fin y al cabo nadie puede escapar a ejercer violencia en este mundo, 
 pero nada tiene que ver hacerlo al 1% o al 99%. En una escala de grises el 
 primero es prácticamente blanco mientras que el segundo es casi totalmente negro.
-¿Qué es ser violento? Hacer acciones cuyas consecuencias previsibles sean
-violentas. No es necesario ejercer la violencia con nuestras propias manos.
-De la misma forma que pagar a alguien para que haga una acción pacífica es ser
-pacífico, pagar para que alguien haga una acción violenta es ser violento. No
-exculpa un juez a alguien que contrata a un sicario. Al revés, el sicario bien
-puede merecer una pena menor que su cliente. De forma ánáloga, poner en el
-cesto de la compra un producto violento no va a dejar de mancharte las manos
-de sangre, por muy  empaquetado que venga.<br><br>
+También hay mucha diferencia entre el 1% y el 5%. El 0% de violencia parece
+una utopía asintótica, pero cada pequeño paso hacia ese 0 tiene una enorme
+importancia.<br><br>
 
-No es violencia cuando no se conoce lo que hay detrás. Pero ¿quién no conoce
-lo que hay detrás? Otra cosa muy distinta es <b>no quererlo saber</b>, en cuyo caso
+¿Qué es ser violento? Hacer acciones cuyas consecuencia previsible sean
+el sufrimiento de otro ser.
+No es necesario ejercer la violencia con nuestras propias manos.
+De la misma forma que pagar a alguien para que haga una acción pacífica es ser
+pacífico, pagar para que alguien haga una acción violenta es ser violento.
+Y si sentimos orgullo al donar para una causa benéfica, ¿cómo no sentimos
+vergüenza al pagar para lo contrario? No
+exculpa un juez a alguien que contrata a un sicario. Al revés, el sicario bien
+puede tener una pena algo menor que su cliente. De forma ánáloga, poner en el
+cesto de la compra un producto violento no va a dejar de mancharte las manos
+de sangre, por muy  empaquetado que venga. En este caso no va a venir
+ningún juez a encarcelarte, porque este representa solamente a la justicia
+humana. Y de la misma forma que 'democracias' es igual a 'no democracia', porque
+la pluralidad de estas busca la explotación de unas a otras, tampoco hay
+justicia cuando hay justicias separadas por categorías. <br><br>
+
+No es violencia cuando no se conoce lo que hay detrás. Pero ¿quién,
+hoy en día, no conoce
+lo que hay detrás de la explotación animal?
+Otra cosa muy distinta es <b>no quererlo saber</b>, en cuyo caso
 no solo se peca de violento sino también de cobarde. <br><br>
 
 ¿Y si hay alguna violencia necesaria? Como la que observamos en cualquier
@@ -138,7 +152,7 @@ científico es clarísimo: no hay ninguna necesidad (para nuestra especie)
 de comer animales ni
 ninguno de sus derivados. Afirmar lo contrario es equivalente a afirmar
 que la Tierra es plana. En ambos casos parece que haya abismos y dragones más allá
-del terreno cercano. Son los de la ignorancia y el miedo a lo nuevo.<br><br>
+del terreno cercano. Son los de la ignorancia y el miedo al conocimiento.<br><br>
 
 Tampoco hay necesidad alguna de productos cosméticos o
 de ningún otro tipo que requieran animales.
@@ -146,11 +160,11 @@ Y dejemos a los medicamentos para más adelante.
 La diferencia entre la violencia del león con la gacela es que para él
 es una cuestión de necesidad, mientras que para l@s Homo supuestamente
 sapiens no lo es. Y si no es por necesidad quiere decir que 
-es por placer. No por 'cultura', por inercia o por contexto social.
+es una cuestión de placer. No por 'cultura', por inercia o por contexto social.
 No te engañes. Es <b>violencia a cambio de placer</b>, que no
 es lo mismo que violencia por placer, pero casi. Existe un término 
-psiquiátrico para describir a personas con un comportamiento poco
-empático. Pero claro, se aplica solamente a quien se sale de la 
+psiquiátrico para describir un comportamiento excesivamente poco
+empático. Pero claro, el criterio se aplica solamente a quien se sale de la 
 normalidad estadística.<br><br>
 
  
