--- a/files/music.html
+++ b/files/music.html
@@ -1,3 +1,4 @@
+<!*****headers**********{{{>
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,19 +6,18 @@
 <link rel="stylesheet" type="text/css" href="../../css.css" media="screen" title="aleix" />
 </head>
 <body>
+<!*****headers*********}}}> 
+<!*****0006-patterns with the TE PO-12**********{{{>
 
-<!****************************************************************************************************************************************************>
-<a id="m_0006" href="#last" onclick="toggle('music_0006')"><h5>First set of 16 patterns with the TE PO-12 (26/12/18)</h5></a>
-              	<ul id="music_0006" style="display:none">
-
+<a id="m_0006" href="#last" onclick="toggle('music_0006')">
+<h5>First set of 16 patterns with the TE PO-12 </h5></a>
+<ul id="music_0006" style="display:none">
 I have been playing with the PO-12 for some days and here I share a full set of 16 original patterns, one of them previously posted.
-
 Set 1 of patterns (130 bpm):<br>
 <audio controls>
   <source src="https://www.dropbox.com/s/maxz921lhbijpck/set1.ogg?raw=1" type="audio/mpeg">
 </audio> <br>
 <br>
-
 Here I post all the patterns one by one.<br><br>
 
 Pattern 4:<br>
@@ -97,12 +97,11 @@ Pattern 18:<br>
 <a  href="https://www.dropbox.com/s/b0bgns9qt6u5div/18.png?raw=1" target=_blank><img src="https://www.dropbox.com/s/b0bgns9qt6u5div/18.png?raw=1" title="18" width=400></a><br>
 
 <br></ul><!music_0006>
-<!****************************************************************************************************************************************************>
-
-
-<!****************************************************************************************************************************************************>
-<a id="m_0005" href="#last" onclick="toggle('music_0005')"><h5>First and silly rhythms with the TE PO-12 (9/12/18)</h5></a>
-              	<ul id="music_0005" style="display:none">
+<!*****0006-patterns with the TE PO-12*********}}}> 
+<!*****0005- First rhythms with the PO-12**********{{{>
+<a id="m_0005" href="#last" onclick="toggle('music_0005')">
+<h5>First and silly rhythms with the TE PO-12</h5></a>
+<ul id="music_0005" style="display:none">
 
 The Teenage Engineering PO-12 Rhythm Pocket Calculator is an amazing toy to experiment with rhythms. It is not a super professional
 drum machine, but more than enough for an amateur like me who just wants to learn. And for a pianist, it can be seen as well as an
@@ -129,13 +128,12 @@ Pattern 3:<br>
   <source src="https://www.dropbox.com/s/10jbcwwm7yzcd0d/03.ogg?raw=1" type="audio/mpeg">
 </audio> <br>
 <a  href="https://www.dropbox.com/s/mgnm9rsgwv0i1fk/03.png?raw=1" target=_blank><img src="https://www.dropbox.com/s/mgnm9rsgwv0i1fk/03.png?raw=1" title="1" width=400></a><br>
-
-
 <br></ul><!music_0005>
-<!****************************************************************************************************************************************************>
-<!****************************************************************************************************************************************************>
-<a id="m_0004" href="#last" onclick="toggle('music_0004')"><h5>Two-part Invention 01, by J. S. Bach (9/12/18)</h5></a>
-              	<ul id="music_0004" style="display:none">
+<!*****0005- First rhythms with the PO-12*********}}}> 
+<!*****0004- Two-part Invention 01, by J.S. Bach**********{{{>
+<a id="m_0004" href="#last" onclick="toggle('music_0004')">
+<h5>Two-part Invention 01, by J. S. Bach</h5></a>
+<ul id="music_0004" style="display:none">
 
 The two-part inventions by J. S. Bach are also a good opportunity to play pieces that seem simple but which are not. Here I experiment
 with a canonical harpsichord sound, then a more pianistic version, and finally some weird versions while having fun. <br><br>
@@ -157,9 +155,11 @@ DX7 RubbaRhodes:<br>
   <source src="https://www.dropbox.com/s/jdf59a6kvl5d0bs/01.two-part_invention_01_DX7_RubbaRhodes.ogg?raw=1" type="audio/mpeg">
 </audio> <br>
 <br></ul><!music_0004>
-<!****************************************************************************************************************************************************>
-<a id="m_0003" href="#last" onclick="toggle('music_0003')"><h5>Menuet BWV 115 from the Album of Anna Magdalena Bach, by Christian Petzold (1677-1733) (7/12/18)</h5></a>
-              	<ul id="music_0003" style="display:none">
+<!*****0004- Two-part Invention 01, by J.S. Bach*********}}}> 
+<!*****0003-Menuet BWV 115 Anna Magdalena Bach**********{{{>
+<a id="m_0003" href="#last" onclick="toggle('music_0003')">
+<h5>Menuet BWV 115 from the Album of Anna Magdalena Bach, by Christian Petzold (1677-1733)</h5></a>
+<ul id="music_0003" style="display:none">
 Harpsichord:<br>
 <audio controls>
   <source src="https://www.dropbox.com/s/h7giecyircdmwfd/03.Menuet_BWV_115_Harpsichord.ogg?raw=1" type="audio/mpeg">
@@ -169,9 +169,11 @@ Piano:<br>
   <source src="https://www.dropbox.com/s/t33uaxkb9nffp25/03.Menuet_BWV_115_Piano.ogg?raw=1" type="audio/mpeg">
 </audio> <br>
 <br></ul><!music_0003>
-<!****************************************************************************************************************************************************>
-<a id="m_0002" href="#last" onclick="toggle('music_0002')"><h5>Menuet BWV 114 from the Album of Anna Magdalena Bach, by Christian Petzold (1677-1733) (25/11/18)</h5></a>
-              	<ul id="music_0002" style="display:none">
+<!*****0003-Menuet BWV 115 Anna Magdalena Bach*********}}}> 
+<!*****0002-Menuet BWV 114 Anna Magdalena Bach**********{{{>
+<a id="m_0002" href="#last" onclick="toggle('music_0002')">
+<h5>Menuet BWV 114 from the Album of Anna Magdalena Bach, by Christian Petzold (1677-1733)</h5></a>
+<ul id="music_0002" style="display:none">
 Piano:<br>
 <audio controls>
   <source src="https://www.dropbox.com/s/o66dlcvkwcz7iow/02.Menuet_BWV_114_Piano.ogg?raw=1" type="audio/mpeg">
@@ -185,9 +187,11 @@ Guitar (sampled, played with the keyboard):<br>
   <source src="https://www.dropbox.com/s/877bdi05n9zude3/02.Menuet_BWV_114_Guitar_%5BKeyboard%5D.ogg?raw=1" type="audio/mpeg">
 </audio> <br>
 <br></ul><!music_0002>
-<!****************************************************************************************************************************************************>
-<a id="m_0001" href="#last" onclick="toggle('music_0001')"><h5>Menuet BWV 113 from the Album of Anna Magdalena Bach (Anonymous composer) (24/11/18)</h5></a>
-              	<ul id="music_0001" style="display:none">
+<!*****0002-Menuet BWV 114 Anna Magdalena Bach*********}}}> 
+<!*****0001-Menuet BWV 113 Anna Magdalena Bach**********{{{>
+<a id="m_0001" href="#last" onclick="toggle('music_0001')">
+<h5>Menuet BWV 113 from the Album of Anna Magdalena Bach (Anonymous composer)</h5></a>
+<ul id="music_0001" style="display:none">
 
 I have chosen the Album of Anna Magdalena Bach as my first recording material. With it, I want to learn how to record and edit tracks, and to experiment with different
 sounds. For now, all piano tracks come from the Royal Grand of the Nord Stage 3. I will postpone recording on my real grand piano until I learn more about how to properly set the microphones in the room. <br><br>
@@ -207,9 +211,11 @@ Piano (weirdly fast version, just a crazy experiment):<br>
   <source src="https://www.dropbox.com/s/nfcd3eebt0bnx78/01.Menuet_BWV_113_Piano_%28fast%29.ogg?raw=1" type="audio/mpeg">
 </audio> <br>
 <br></ul><!music_0001>
-<!****************************************************************************************************************************************************>
-<a id="m_0000b" href="#last" onclick="toggle('music_0000b')"><h5>My instruments</h5></a>
-              	<ul id="music_0000b" style="display:none">
+<!*****0001-Menuet BWV 113 Anna Magdalena Bach*********}}}> 
+<!*****0000b-my instruments**********{{{>
+<a id="m_0000b" href="#last" onclick="toggle('music_0000b')">
+<h5>My instruments</h5></a>
+<ul id="music_0000b" style="display:none">
 
 My instruments are:<br><br>
 
@@ -219,11 +225,12 @@ My instruments are:<br><br>
 -TE PO-12 Rhythm<br><br>
 
 <br></ul><!music_0000b>
-<!****************************************************************************************************************************************************>
-<a id="m_0000" href="#last" onclick="toggle('music_0000')"><h5>Creative Commons License</h5></a>
-              	<ul id="music_0000" style="display:none">
+<!*****0000b-my instruments*********}}}> 
+<!*****0000a**********{{{>
+<a id="m_0000" href="#last" onclick="toggle('music_0000')">
+<h5>Creative Commons License</h5></a>
+<ul id="music_0000" style="display:none">
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />All music tracks in this section are recorded by me and they are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
-
 
 Under the following terms:<br><br>
 
@@ -233,11 +240,8 @@ adapt, remix, transform, and build upon the material for any purpose, even comme
 -If you remix, transform, or build upon the material, you must distribute your contributions under the same license as the original.<br><br>
 -No additional restrictions.<br><br>
 -The licensor cannot revoke these freedoms as long as you follow the license terms.<br><br>
-
-
 <br></ul><!music_0000>
-<!****************************************************************************************************************************************************>
-
+<!*****0000a*********}}}> 
 </body>
 </html>
 
