--- a/files/books.html
+++ b/files/books.html
@@ -1,3 +1,5 @@
+<!*****headers**********{{{>
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,12 +8,25 @@
 </head>
 <body>
 <br>
+<!*****headers*********}}}> 
 
+-Currently reading...  <i>How not to be wrong</i>, by Jordan Ellenberg. <br><br>
 
-
--Currently reading...  <i>Wherever you go, there you are</i>, by Jon Kabat-Zinn. <br><br>
-
-<!__________________________________BOOKS-2018____________________________________________________>
+<!*****books-2019**********{{{>
+<!-----books 2019 code-----{{{>
+<li type="disc">
+<h4><a href="#last" onclick="toggle('books 2019')">2019</a></h4></li>
+<ul id="books 2019" style="display:none"><!2019><br><br>
+<!-----books 2019 code-----}}}>
+-<font size="4"><i> Miss Peregrine's home for Peculiar Children</i></font>, by Ransom Riggs <br><br>
+-<font size="4"><i> Pingüino perdido</i></font>, de Andrei Kurkov <br><br>
+-<font size="4"><i> Men of Mathematics, vol.I</i></font>, Eric Temple Bell <br><br>
+-<font size="4"><i> I, Asimov</i></font>, by Isaac Asimov <br><br>
+-<font size="4"><i> Mozart in the Jungle</i></font>, by Blair Tindall <br><br>
+-<font size="4"><i> Wherever you go, there you are</i></font>, by Jon Jabat-Zinn <br><br>
+<br><br></ul><!2019>
+<!*****books-2019*********}}}> 
+<!*****books-2018**********{{{
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2018')">2018</a></h4></li>
               	<ul id="books_2018" style="display:none"><!2018><br><br>
 
@@ -30,9 +45,8 @@
 
 <br><br>
 </ul><!2018>
-<!__________________________________END_OF_BOOKS-2018____________________________________________________>
-
-<!__________________________________BOOKS-2017____________________________________________________>
+<!*****books-2018*********}}}> 
+<!*****books-2017**********{{{>
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2017')">2017</a></h4></li>
               	<ul id="books_2017" style="display:none"><!2017><br><br>
 
@@ -57,8 +71,8 @@
 -<font size="4"><i>Foundation</i></font>, by James Lovelock. <br><br>
 <br><br>
 </ul><!2017>
-<!__________________________________END_OF_BOOKS-2017____________________________________________________>
-<!__________________________________BOOKS-2016____________________________________________________>
+<!*****books-2017*********}}}> 
+<!*****books-2016**********{{{>
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2016')">2016</a></h4></li>
               	<ul id="books_2016" style="display:none"><!2016><br><br>
 -<font size="4"><i>Gut: The Inside Story of Our Body's Most Underrated Organ</i></font>, by Giulia Enders. <br><br>
@@ -72,9 +86,8 @@
 -<font size="4"><i>Congo</i></font>, by Michael Crichton. <br><br>
 <br><br>
 </ul><!2016>
-<!__________________________________END_OF_BOOKS-2016____________________________________________________>
-
-<!__________________________________BOOKS-2015____________________________________________________>
+<!*****books-2016*********}}}> 
+<!*****books-2015**********{{{>
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2015')">2015</a></h4></li>
               	<ul id="books_2015" style="display:none"><!2015><br>
 
@@ -86,9 +99,8 @@
 -<font size="4"><i>Love and Math: The Heart of Hidden Reality</i></font>, by Edward Frenkel .<br><br>
 -<font size="4"><i>Alan Turing, the Enigma</i></font>, by Andrew Hodges .<br><br>
 </ul><!2015>
-<!__________________________________END_OF_BOOKS-2015____________________________________________________>
-
-<!__________________________________BOOKS-2014____________________________________________________>
+<!*****books-2015*********}}}> 
+<!*****books-2014**********{{{>
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2014')">2014</a></h4></li>
               	<ul id="books_2014" style="display:none"><!2014><br>
 -<font size="4"><i>What Do You Care What Other People Think?</i></font>, by Richard Feynman.<br><br>
@@ -120,11 +132,8 @@ Una obra magn&iacute;fica llena de toques morales pero hechos con bastante graci
 (<a href="http://www.cervantesvirtual.com/obra-visor/las-flores-de-don-juan-y-rico-y-pobre-trocados-comedia-famosa--0/html/ffa88a44-82b1-11df-acc7-002185ce6064.htm" target=_blank>Enlace</a> a Cervantes Virtual.)
 <br><br>
 </ul><!2014>
-<!__________________________________END_OF_BOOKS-2014____________________________________________________>
-
-
-
-<!__________________________________BOOKS-2013____________________________________________________>
+<!*****books-2014*********}}}> 
+<!*****books-2013**********{{{>
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2013')">2013</a></h4></li>
               	<ul id="books_2013" style="display:none"><!2013><br>
 
@@ -223,8 +232,8 @@ Un ejemplo de hasta d&oacute;nde puede alguien autohumillarse para perseguir a s
 -<font size="4"><i>Los Melindres de Belisa</i></font>, by Lope de Vega. Belisa es un personaje para volverse loco. De esos que adoras en escena pero al que odiar&iacute;s en la vida real. La obra est&aacute; llena de enga&ntilde;os y equ&iacute;vocos. La oscuridad final es buen&iacute;sima. 
 (<a href="http://www.cervantesvirtual.com/obra/la-dama-melindrosa/" target=_blank>Enlace</a> de la Biblioteca Virtual Miguel de Cervantes).
 </ul><!2013>
-<!__________________________________END_OF_BOOKS-2013____________________________________________________>
-<!__________________________________BOOKS-2012____________________________________________________>
+<!*****books-2013*********}}}> 
+<!*****books-2012**********{{{>
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2012')">2012</a></h4></li>
               	<ul id="books_2012" style="display:none"><!2012><br>
 
@@ -349,7 +358,7 @@ la forma en que se odian los novios nada m&aacute;s verse. &iexcl;Cu&aacute;ntas
 -<font size="4"><i>Fuenteovejuna</i></font>, de Lope de Vega. Aunque es archifamosa nunca antes la hab&iacute;a le&iacute;do, y no me ha decepcionado. Me ha parecido muy contempor&aacute;nea, al menos en potencia, pues los que hoy en d&iacute;a gobiernan nos est&aacute;n inflando las narices y pueden acabar como el Comendador. Me ha parecido que tiene cierta relaci&oacute;n con <i>Las Bacantes</i> de Eur&iacute;pides, m&aacute;s que nada por el linchamiento (por decirlo de forma suave) colectivo. Tambi&eacute;n me ha parecido curioso que no se diga el t&oacute;pico de "Fuenteovejuna, todos a una". Esto es como lo de "T&oacute;cala otra vez, Sam, en <i>Casablanca</i>... (<a href="http://bib.cervantesvirtual.com/servlet/SirveObras/07683847377875633905302/index.htm" target=_blank>Enlace</a> al html de la obra)." <br><br>
 </ul><!2012>
 <br><br>
-<!__________________________________END_OF_BOOKS-2012____________________________________________________>
+<!*****books-2012*********}}}> 
 
 
 </body>
