--- a/files/eructos_filosoficos.html
+++ b/files/eructos_filosoficos.html
@@ -9,8 +9,8 @@
 <!*****headers*********}}}> 
 <!-----[151,200]-----{{{>
 <!-----[151,200] code-----{{{>
-<h3><a href="#last" onclick="toggle('[151,200]')">[151,200]</a></h3>
-<ul id="[151,200]" style="display:none"><![151,200]><br><br>
+<h3><a href="#last" onclick="toggle('151200')">[151,200]</a></h3>
+<ul id="151200" style="display:none"><![151,200]><br><br>
 <!-----[151,200] code-----}}}>
 <!-----180-----{{{>
 <a id="180" href="#last" onclick="toggle('eructo_180')"><h3>180</h3></a>
