--- a/files/books.html
+++ b/files/books.html
@@ -1,23 +1,22 @@
-<!*****headers**********{{{>
+<!*****headers**********{{{-->
 
 <!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<link rel="stylesheet" type="text/css" href="../../css.css" media="screen" title="aleix" />
+<link rel="stylesheet" type="text/css" href="../css.css" media="screen" title="aleix" />
 </head>
 <body>
 <br>
-<!*****headers*********}}}> 
+<!*****headers*********}}}--> 
 
 -Currently reading...  <i>How not to be wrong</i>, by Jordan Ellenberg. <br><br>
 
-<!*****books-2019**********{{{>
-<!-----books 2019 code-----{{{>
-<li type="disc">
-<h4><a href="#last" onclick="toggle('books 2019')">2019</a></h4></li>
-<ul id="books 2019" style="display:none"><!2019><br><br>
-<!-----books 2019 code-----}}}>
+<!*****books-2019**********{{{-->
+<!-----books_2019_code-----{{{-->
+<li type="disc"><h4><a href="#last" onclick="toggle('books_2019')">2019</a></h4></li>
+<ul id="books_2019" style="display:none"><!2019><br><br>
+<!-----books 2019 code-----}}}-->
 -<font size="4"><i> Miss Peregrine's home for Peculiar Children</i></font>, by Ransom Riggs <br><br>
 -<font size="4"><i> Pingüino perdido</i></font>, de Andrei Kurkov <br><br>
 -<font size="4"><i> Men of Mathematics, vol.I</i></font>, Eric Temple Bell <br><br>
@@ -25,12 +24,10 @@
 -<font size="4"><i> Mozart in the Jungle</i></font>, by Blair Tindall <br><br>
 -<font size="4"><i> Wherever you go, there you are</i></font>, by Jon Jabat-Zinn <br><br>
 <br><br></ul><!2019>
-<!*****books-2019*********}}}> 
+<!*****books-2019*********}}}--> 
 <!*****books-2018**********{{{
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2018')">2018</a></h4></li>
               	<ul id="books_2018" style="display:none"><!2018><br><br>
-
-
 -<font size="4"><i> Take Control of the Noisy Class</i></font>, by Rob Plevin <br><br>
 -<font size="4"><i> Muerte con pingüino</i></font>, de Andrei Kurkov <br><br>
 -<font size="4"><i> Caves of Steel</i></font>, by Isaac Asimov <br><br>
@@ -42,11 +39,10 @@
 -<font size="4"><i> Storm in a Teacup</i></font>, by Helen Cerski <br><br>
 -<font size="4"><i> The Shallows: what the internet is doing to our brains</i></font>, by Nicholas Carr <br><br>
 -<font size="4"><i> The Mathematics of Love: Patterns, Proofs, and the Search for the Ultimate Equation</i></font>, by Hannah Fry <br><br>
-
 <br><br>
 </ul><!2018>
-<!*****books-2018*********}}}> 
-<!*****books-2017**********{{{>
+<!*****books-2018*********}}}--> 
+<!*****books-2017**********{{{-->
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2017')">2017</a></h4></li>
               	<ul id="books_2017" style="display:none"><!2017><br><br>
 
@@ -71,8 +67,8 @@
 -<font size="4"><i>Foundation</i></font>, by James Lovelock. <br><br>
 <br><br>
 </ul><!2017>
-<!*****books-2017*********}}}> 
-<!*****books-2016**********{{{>
+<!*****books-2017*********}}}--> 
+<!*****books-2016**********{{{-->
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2016')">2016</a></h4></li>
               	<ul id="books_2016" style="display:none"><!2016><br><br>
 -<font size="4"><i>Gut: The Inside Story of Our Body's Most Underrated Organ</i></font>, by Giulia Enders. <br><br>
@@ -86,8 +82,8 @@
 -<font size="4"><i>Congo</i></font>, by Michael Crichton. <br><br>
 <br><br>
 </ul><!2016>
-<!*****books-2016*********}}}> 
-<!*****books-2015**********{{{>
+<!*****books-2016*********}}}--> 
+<!*****books-2015**********{{{-->
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2015')">2015</a></h4></li>
               	<ul id="books_2015" style="display:none"><!2015><br>
 
@@ -99,8 +95,8 @@
 -<font size="4"><i>Love and Math: The Heart of Hidden Reality</i></font>, by Edward Frenkel .<br><br>
 -<font size="4"><i>Alan Turing, the Enigma</i></font>, by Andrew Hodges .<br><br>
 </ul><!2015>
-<!*****books-2015*********}}}> 
-<!*****books-2014**********{{{>
+<!*****books-2015*********}}}--> 
+<!*****books-2014**********{{{-->
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2014')">2014</a></h4></li>
               	<ul id="books_2014" style="display:none"><!2014><br>
 -<font size="4"><i>What Do You Care What Other People Think?</i></font>, by Richard Feynman.<br><br>
@@ -132,8 +128,8 @@ Una obra magn&iacute;fica llena de toques morales pero hechos con bastante graci
 (<a href="http://www.cervantesvirtual.com/obra-visor/las-flores-de-don-juan-y-rico-y-pobre-trocados-comedia-famosa--0/html/ffa88a44-82b1-11df-acc7-002185ce6064.htm" target=_blank>Enlace</a> a Cervantes Virtual.)
 <br><br>
 </ul><!2014>
-<!*****books-2014*********}}}> 
-<!*****books-2013**********{{{>
+<!*****books-2014*********}}}--> 
+<!*****books-2013**********{{{-->
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2013')">2013</a></h4></li>
               	<ul id="books_2013" style="display:none"><!2013><br>
 
@@ -232,8 +228,8 @@ Un ejemplo de hasta d&oacute;nde puede alguien autohumillarse para perseguir a s
 -<font size="4"><i>Los Melindres de Belisa</i></font>, by Lope de Vega. Belisa es un personaje para volverse loco. De esos que adoras en escena pero al que odiar&iacute;s en la vida real. La obra est&aacute; llena de enga&ntilde;os y equ&iacute;vocos. La oscuridad final es buen&iacute;sima. 
 (<a href="http://www.cervantesvirtual.com/obra/la-dama-melindrosa/" target=_blank>Enlace</a> de la Biblioteca Virtual Miguel de Cervantes).
 </ul><!2013>
-<!*****books-2013*********}}}> 
-<!*****books-2012**********{{{>
+<!*****books-2013*********}}}--> 
+<!*****books-2012**********{{{-->
 <li type="disc"><h4><a href="#last" onclick="toggle('books_2012')">2012</a></h4></li>
               	<ul id="books_2012" style="display:none"><!2012><br>
 
@@ -358,7 +354,7 @@ la forma en que se odian los novios nada m&aacute;s verse. &iexcl;Cu&aacute;ntas
 -<font size="4"><i>Fuenteovejuna</i></font>, de Lope de Vega. Aunque es archifamosa nunca antes la hab&iacute;a le&iacute;do, y no me ha decepcionado. Me ha parecido muy contempor&aacute;nea, al menos en potencia, pues los que hoy en d&iacute;a gobiernan nos est&aacute;n inflando las narices y pueden acabar como el Comendador. Me ha parecido que tiene cierta relaci&oacute;n con <i>Las Bacantes</i> de Eur&iacute;pides, m&aacute;s que nada por el linchamiento (por decirlo de forma suave) colectivo. Tambi&eacute;n me ha parecido curioso que no se diga el t&oacute;pico de "Fuenteovejuna, todos a una". Esto es como lo de "T&oacute;cala otra vez, Sam, en <i>Casablanca</i>... (<a href="http://bib.cervantesvirtual.com/servlet/SirveObras/07683847377875633905302/index.htm" target=_blank>Enlace</a> al html de la obra)." <br><br>
 </ul><!2012>
 <br><br>
-<!*****books-2012*********}}}> 
+<!*****books-2012*********}}}--> 
 
 
 </body>
