--- a/files/books.html
+++ b/files/books.html
@@ -1,4 +1,4 @@
-<!*****headers**********{{{-->
+<!-- *****headers**********{{{ -->
 
 <!DOCTYPE html>
 <html>
@@ -8,15 +8,15 @@
 </head>
 <body>
 <br>
-<!*****headers*********}}}--> 
+<!-- *****headers*********}}} --> 
 
 -Currently reading...  <i>How not to be wrong</i>, by Jordan Ellenberg. <br><br>
 
-<!*****books-2019**********{{{-->
-<!-----books_2019_code-----{{{-->
-<li type="disc"><h4><a href="#last" onclick="toggle('books_2019')">2019</a></h4></li>
+<!-- *****books_2019**********{{{ -->
+<!-- *****books_2019_code*****{{{ -->
+<h4><a href="#last" onclick="toggle('books_2019')">2019</a></h4>
 <ul id="books_2019" style="display:none"><!2019><br><br>
-<!-----books 2019 code-----}}}-->
+<!-- books 2019 code*****}}} -->
 -<font size="4"><i> Miss Peregrine's home for Peculiar Children</i></font>, by Ransom Riggs <br><br>
 -<font size="4"><i> Pingüino perdido</i></font>, de Andrei Kurkov <br><br>
 -<font size="4"><i> Men of Mathematics, vol.I</i></font>, Eric Temple Bell <br><br>
@@ -24,10 +24,12 @@
 -<font size="4"><i> Mozart in the Jungle</i></font>, by Blair Tindall <br><br>
 -<font size="4"><i> Wherever you go, there you are</i></font>, by Jon Jabat-Zinn <br><br>
 <br><br></ul><!2019>
-<!*****books-2019*********}}}--> 
-<!*****books-2018**********{{{
-<li type="disc"><h4><a href="#last" onclick="toggle('books_2018')">2018</a></h4></li>
-              	<ul id="books_2018" style="display:none"><!2018><br><br>
+<!-- *****books_2019*********}}} --> 
+<!-- *****books_2018*****{{{ -->
+<!-- *****books_2018_code*****{{{ -->
+<h4><a href="#last" onclick="toggle('books_2018')">2018</a></h4>
+<ul id="books_2018" style="display:none"><!2018><br><br>
+<!-- *****books 2018 code*****}}} -->
 -<font size="4"><i> Take Control of the Noisy Class</i></font>, by Rob Plevin <br><br>
 -<font size="4"><i> Muerte con pingüino</i></font>, de Andrei Kurkov <br><br>
 -<font size="4"><i> Caves of Steel</i></font>, by Isaac Asimov <br><br>
@@ -41,11 +43,10 @@
 -<font size="4"><i> The Mathematics of Love: Patterns, Proofs, and the Search for the Ultimate Equation</i></font>, by Hannah Fry <br><br>
 <br><br>
 </ul><!2018>
-<!*****books-2018*********}}}--> 
-<!*****books-2017**********{{{-->
-<li type="disc"><h4><a href="#last" onclick="toggle('books_2017')">2017</a></h4></li>
-              	<ul id="books_2017" style="display:none"><!2017><br><br>
-
+<!-- *****books_2018*****}}} --> 
+<!*****books_2017**********{{{>
+<h4><a href="#last" onclick="toggle('books_2017')">2017</a></h4>
+<ul id="books_2017" style="display:none"><!2017><br><br>
 -<font size="4"><i> The Subtle Art of Not Giving a Fuck</i></font>, by Mark Manson <br><br>
 -<font size="4"><i> Tau zero</i></font>, by Poul Anderson. <br><br>
 -<font size="4"><i> 1984</i></font>, by George Orwell. <br><br>
@@ -67,10 +68,10 @@
 -<font size="4"><i>Foundation</i></font>, by James Lovelock. <br><br>
 <br><br>
 </ul><!2017>
-<!*****books-2017*********}}}--> 
-<!*****books-2016**********{{{-->
-<li type="disc"><h4><a href="#last" onclick="toggle('books_2016')">2016</a></h4></li>
-              	<ul id="books_2016" style="display:none"><!2016><br><br>
+<!-- *****books_2017*********}}} --> 
+<!-- *****books_2016*****{{{ -->
+<h4><a href="#last" onclick="toggle('books_2016')">2016</a></h4>
+<ul id="books_2016" style="display:none"><!2016><br><br>
 -<font size="4"><i>Gut: The Inside Story of Our Body's Most Underrated Organ</i></font>, by Giulia Enders. <br><br>
 -<font size="4"><i>The vanishing face of Gaia</i></font>, by James Lovelock. <br><br>
 -<font size="4"><i>Ahsoka</i></font>, by E.K. Johnston. <br><br>
@@ -82,9 +83,9 @@
 -<font size="4"><i>Congo</i></font>, by Michael Crichton. <br><br>
 <br><br>
 </ul><!2016>
-<!*****books-2016*********}}}--> 
-<!*****books-2015**********{{{-->
-<li type="disc"><h4><a href="#last" onclick="toggle('books_2015')">2015</a></h4></li>
+<!-- *****books_2016*********}}} --> 
+<!-- *****books_2015*****{{{ -->
+<h4><a href="#last" onclick="toggle('books_2015')">2015</a></h4>
               	<ul id="books_2015" style="display:none"><!2015><br>
 
 -<font size="4"><i>Fleet:the complete collection</i></font>, by Andrew D. Thaler.<br><br>
@@ -95,9 +96,9 @@
 -<font size="4"><i>Love and Math: The Heart of Hidden Reality</i></font>, by Edward Frenkel .<br><br>
 -<font size="4"><i>Alan Turing, the Enigma</i></font>, by Andrew Hodges .<br><br>
 </ul><!2015>
-<!*****books-2015*********}}}--> 
-<!*****books-2014**********{{{-->
-<li type="disc"><h4><a href="#last" onclick="toggle('books_2014')">2014</a></h4></li>
+<!-- *****books_2015*********}}} --> 
+<!-- *****books_2014*****{{{ -->
+<h4><a href="#last" onclick="toggle('books_2014')">2014</a></h4>
               	<ul id="books_2014" style="display:none"><!2014><br>
 -<font size="4"><i>What Do You Care What Other People Think?</i></font>, by Richard Feynman.<br><br>
 -<font size="4"><i>Zorba the Greek</i></font>, by Nikos Kazantzakis.<br><br>
@@ -128,10 +129,10 @@ Una obra magn&iacute;fica llena de toques morales pero hechos con bastante graci
 (<a href="http://www.cervantesvirtual.com/obra-visor/las-flores-de-don-juan-y-rico-y-pobre-trocados-comedia-famosa--0/html/ffa88a44-82b1-11df-acc7-002185ce6064.htm" target=_blank>Enlace</a> a Cervantes Virtual.)
 <br><br>
 </ul><!2014>
-<!*****books-2014*********}}}--> 
-<!*****books-2013**********{{{-->
-<li type="disc"><h4><a href="#last" onclick="toggle('books_2013')">2013</a></h4></li>
-              	<ul id="books_2013" style="display:none"><!2013><br>
+<!-- *****books_2014*********}}} --> 
+<!-- *****books_2013**********{{{ -->
+<h4><a href="#last" onclick="toggle('books_2013')">2013</a></h4>
+<ul id="books_2013" style="display:none"><!2013><br>
 
 -<font size="4"><i>The selfish gene</i></font>, by Richard Dawkins.
 Well, this is one of the most intelligent science books I have ever read. Its position as a sience classic is well justified. It is extremely well written and it keeps its engaging prose even through some tough and dense discussions. But the important thing is that this book has made me think a lot. The perspective of the gene is fascinating, and its implications for concepts such as altruism, cooperation or even deception is far reaching. There is one negative thing, however: the machine is put under its proper role. I think there is more to say about machines. Genes are hugely important players, but to me are dead entities. I will soon publish a text on this topic, so keep it tuned with the publications section! And read this amazing book as soon as possible!
@@ -228,10 +229,10 @@ Un ejemplo de hasta d&oacute;nde puede alguien autohumillarse para perseguir a s
 -<font size="4"><i>Los Melindres de Belisa</i></font>, by Lope de Vega. Belisa es un personaje para volverse loco. De esos que adoras en escena pero al que odiar&iacute;s en la vida real. La obra est&aacute; llena de enga&ntilde;os y equ&iacute;vocos. La oscuridad final es buen&iacute;sima. 
 (<a href="http://www.cervantesvirtual.com/obra/la-dama-melindrosa/" target=_blank>Enlace</a> de la Biblioteca Virtual Miguel de Cervantes).
 </ul><!2013>
-<!*****books-2013*********}}}--> 
-<!*****books-2012**********{{{-->
-<li type="disc"><h4><a href="#last" onclick="toggle('books_2012')">2012</a></h4></li>
-              	<ul id="books_2012" style="display:none"><!2012><br>
+<!-- *****books_2013*********}}} --> 
+<!-- *****books_2012*****{{{ -->
+<h4><a href="#last" onclick="toggle('books_2012')">2012</a></h4>
+<ul id="books_2012" style="display:none"><!2012><br>
 
 -<font size="4"><i>Por la puente, Juana</i></font>, by Lope de Vega. Una obra de costumbres, amor y honor. Los protagonistas viven como
 personajes dentro de otros, huyendo de su pasado m&aacute;s reciente.
@@ -354,7 +355,7 @@ la forma en que se odian los novios nada m&aacute;s verse. &iexcl;Cu&aacute;ntas
 -<font size="4"><i>Fuenteovejuna</i></font>, de Lope de Vega. Aunque es archifamosa nunca antes la hab&iacute;a le&iacute;do, y no me ha decepcionado. Me ha parecido muy contempor&aacute;nea, al menos en potencia, pues los que hoy en d&iacute;a gobiernan nos est&aacute;n inflando las narices y pueden acabar como el Comendador. Me ha parecido que tiene cierta relaci&oacute;n con <i>Las Bacantes</i> de Eur&iacute;pides, m&aacute;s que nada por el linchamiento (por decirlo de forma suave) colectivo. Tambi&eacute;n me ha parecido curioso que no se diga el t&oacute;pico de "Fuenteovejuna, todos a una". Esto es como lo de "T&oacute;cala otra vez, Sam, en <i>Casablanca</i>... (<a href="http://bib.cervantesvirtual.com/servlet/SirveObras/07683847377875633905302/index.htm" target=_blank>Enlace</a> al html de la obra)." <br><br>
 </ul><!2012>
 <br><br>
-<!*****books-2012*********}}}--> 
+<!-- *****books_2012*********}}} --> 
 
 
 </body>
