--- a/files/eructos_filosoficos.html
+++ b/files/eructos_filosoficos.html
@@ -916,7 +916,7 @@ realizado el enlace, la reacción se da por acabada.
 <!-- *****[51,100]*****{{{ -->
 <!-- *****[51,100] code**********{{{ -->
 
-<h3><a id="id_51100" href="#last" onclick="toggle('51100')"><h3>51-100</a></h3>
+<h3><a id="id_51100" href="#last" onclick="toggle('51100')"><h3>[51-100]</a></h3>
               	<ul id="51100" style="display:none">
 <!-- *****[51,100] code*********}}} --> 
 <!-- *****100*****{{{ -->
