--- a/index.html
+++ b/index.html
@@ -62,9 +62,16 @@ you@aleix_alva:~$
 <!*****meditacción*********}}}> 
 <!*****blog**********{{{>
 <h2><a href="index.html#last" onclick="toggle('node_blog')">blog</a></h2><!blog><ul id="node_blog" style="display:none">
+<!*****blog-0007**********{{{>
+<h3><a id="id_node_entry_0007" href="index.html#last" onclick="toggle('node_entry_0007')"> 7. Mr. Robot</a></h3>
+<!entry_0007><ul id="node_entry_0007" style="display:none"><br>
+<script type="text/javascript"> $("#id_node_entry_0007").click(function(){$("#node_entry_0007").load("files/blog/blog_0007.html",function () {
+        MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
+<br><br> </ul><!entry_0007>
+<!*****blog-0006*********}}}> 
 <!*****blog-0006**********{{{>
 <h3><a id="id_node_entry_0006" href="index.html#last" onclick="toggle('node_entry_0006')"> 6. La Oca Asesina</a></h3>
-<!entry_0005><ul id="node_entry_0006" style="display:none"><br>
+<!entry_0006><ul id="node_entry_0006" style="display:none"><br>
 <script type="text/javascript"> $("#id_node_entry_0006").click(function(){$("#node_entry_0006").load("files/blog/blog_0006.html",function () {
         MathJax.Hub.Queue(["Typeset", MathJax.Hub, "myDiv"]);} );});</script> 
 <br><br> </ul><!entry_0006>
