--- a/files/books.html
+++ b/files/books.html
@@ -10,13 +10,23 @@
 <br>
 <!-- *****headers*********}}} --> 
 
--Currently reading...  <i>The Three-Body Problem</i>, by Cixin Liu. <br><br>
+-Currently reading...  <i>The Way of Zen</i>, by Alan W. Watts. <br><br>
 
+<!-- *****books_2020**********{{{ -->
+<!-- *****books_2020_code*****{{{ -->
+<h4><a href="#last" onclick="toggle('books_2020')">2020</a></h4>
+<ul id="books_2020" style="display:none"><!2020><br><br>
+<!-- books 2020 code*****}}} -->
+-<font size="4"><i> The Way of Zen</i></font>, by Alan W. Watts<br><br>
+<br><br></ul><!2020>
+<!-- *****books_2020*********}}} --> 
 <!-- *****books_2019**********{{{ -->
 <!-- *****books_2019_code*****{{{ -->
 <h4><a href="#last" onclick="toggle('books_2019')">2019</a></h4>
 <ul id="books_2019" style="display:none"><!2019><br><br>
 <!-- books 2019 code*****}}} -->
+-<font size="4"><i> Sapiens, a brief history of humankind</i></font>, by Yuval Noah Harari<br><br>
+-<font size="4"><i> The Three-Body Problem</i></font>, by Cixin Liu<br><br>
 -<font size="4"><i> How not to be wrong</i></font>, by Jordan Ellenberg<br><br>
 -<font size="4"><i> Miss Peregrine's home for Peculiar Children</i></font>, by Ransom Riggs <br><br>
 -<font size="4"><i> Pingüino perdido</i></font>, de Andrei Kurkov <br><br>
@@ -45,7 +55,7 @@
 <br><br>
 </ul><!2018>
 <!-- *****books_2018*****}}} --> 
-<!*****books_2017**********{{{>
+<!--*****books_2017**********{{{-->
 <h4><a href="#last" onclick="toggle('books_2017')">2017</a></h4>
 <ul id="books_2017" style="display:none"><!2017><br><br>
 -<font size="4"><i> The Subtle Art of Not Giving a Fuck</i></font>, by Mark Manson <br><br>
