--- a/files/books.html
+++ b/files/books.html
@@ -10,13 +10,16 @@
 <br>
 <!-- *****headers*********}}} --> 
 
--Currently reading...  <i>The Way of Zen</i>, by Alan W. Watts. <br><br>
+-Currently reading...  <i>William Shakespeare's Star Wars: Verily, A New Hope</i>, by Ian Doescher. <br><br>
 
 <!-- *****books_2020**********{{{ -->
 <!-- *****books_2020_code*****{{{ -->
 <h4><a href="#last" onclick="toggle('books_2020')">2020</a></h4>
 <ul id="books_2020" style="display:none"><!2020><br><br>
 <!-- books 2020 code*****}}} -->
+-<font size="4"><i> La Metamorfosis</i></font>, de Franz Kafka<br><br>
+-<font size="4"><i> La hija de Vercingetórix</i></font>, de Jean-Yves Ferri y Didier Conrad<br><br>
+-<font size="4"><i> The Vital Question</i></font>, by Nick Lane<br><br>
 -<font size="4"><i> The Way of Zen</i></font>, by Alan W. Watts<br><br>
 <br><br></ul><!2020>
 <!-- *****books_2020*********}}} --> 
@@ -28,8 +31,11 @@
 -<font size="4"><i> Sapiens, a brief history of humankind</i></font>, by Yuval Noah Harari<br><br>
 -<font size="4"><i> The Three-Body Problem</i></font>, by Cixin Liu<br><br>
 -<font size="4"><i> How not to be wrong</i></font>, by Jordan Ellenberg<br><br>
+-<font size="4"><i> The Joy of X</i></font>, by Steven Strogatz<br><br>
+-<font size="4"><i> A mathematician's lament</i></font>, by Paul Lockhart<br><br>
 -<font size="4"><i> Miss Peregrine's home for Peculiar Children</i></font>, by Ransom Riggs <br><br>
 -<font size="4"><i> Pingüino perdido</i></font>, de Andrei Kurkov <br><br>
+-<font size="4"><i> Can't Hurt Me</i></font>, by David Goggins<br><br>
 -<font size="4"><i> Men of Mathematics, vol.I</i></font>, Eric Temple Bell <br><br>
 -<font size="4"><i> I, Asimov</i></font>, by Isaac Asimov <br><br>
 -<font size="4"><i> Mozart in the Jungle</i></font>, by Blair Tindall <br><br>
