--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ you@aleix_alva:~$
 <!*****quotation*********}}}> 
 <!*****current comic**********{{{>
 <a  href="http://www.lawebdefisica.com/humor/tiras" target=_blank>
-<img src="https://www.lawebdefisica.com/humor/tiras/comic/2e454599f2a0b467f050c4a1de296bd0a6578879.gif" title="golden irratio" width=500></a>
+<img src="https://www.lawebdefisica.com/humor/tiras/comic/c347ea60181b53d25ea54e78f9ea2040731be701.gif" title="evolove" width=500></a>
 <!*****current comic*********}}}> 
 <!*****home-root**********{{{>
 <ul><!raiz>
