--- a/files/eructos_filosoficos.html
+++ b/files/eructos_filosoficos.html
@@ -12,6 +12,81 @@
 <h3><a href="#last" onclick="toggle('151200')">[151,200]</a></h3>
 <ul id="151200" style="display:none"><![151,200]><br><br>
 <!-- *****[151,200] code*****}}} -->
+
+<!-- *****189*****{{{ -->
+<a id="189" href="#last" onclick="toggle('eructo_189')"><h3>189</h3></a>
+              	<ul id="eructo_189" style="display:none"><br>
+educación: enseñar y enseñarse.<br>
+pedagogía: ensañar y ensañarse.
+<br></ul><!eructo_189>
+<!-- *****189*****}}} -->
+<!-- *****188*****{{{ -->
+<a id="188" href="#last" onclick="toggle('eructo_188')"><h3>188</h3></a>
+              	<ul id="eructo_188" style="display:none"><br>
+Crecer sin fractura acaba pasando factura.  
+<br></ul><!eructo_188>
+<!-- *****188*****}}} -->
+<!-- *****187*****{{{ -->
+<a id="187" href="#last" onclick="toggle('eructo_187')"><h3>187</h3></a>
+              	<ul id="eructo_187" style="display:none"><br>
+La imaginación no es imaginaria,
+salvo que la realidad no sea real.
+<br></ul><!eructo_187>
+<!-- *****187*****}}} -->
+<!-- *****186*****{{{ -->
+<a id="186" href="#last" onclick="toggle('eructo_186')"><h3>186</h3></a>
+              	<ul id="eructo_186" style="display:none"><br>
+Tolerar es ser coherente con tus contradicciones.
+<br></ul><!eructo_186>
+<!-- *****186*****}}} -->
+<!-- *****185*****{{{ -->
+<a id="185" href="#last" onclick="toggle('eructo_185')"><h3>185</h3></a>
+              	<ul id="eructo_185" style="display:none"><br>
+Una metáfora se formatea
+para hacer del arte mofa.
+<br></ul><!eructo_185>
+<!-- *****185*****}}} -->
+<!-- *****184*****{{{ -->
+<a id="184" href="#last" onclick="toggle('eructo_184')"><h3>184</h3></a>
+              	<ul id="eructo_184" style="display:none"><br>
+Al cuchillo y la navaja les pido que sean tangentes para pelar.
+A la frases escritas en los libros les pido que sean perpendiculares para clavarse y matar.
+<br></ul><!eructo_184>
+<!-- *****184*****}}} -->
+<!-- *****183*****{{{ -->
+<h3><a href="#last" onclick="toggle('eructo_183')">183</a></h3>
+<ul id="eructo_183" style="display:none"><!-- 183 --><br><br>
+Los monstruos son seres amorfos, poderosos, a veces grandes, a veces pequeños,
+pero siempre con una enorme escasez de sentimientos.
+Los cuentos en los que hay monstruos están escritos
+por ellos mismos.
+Los cuentos de monstruos están, por consiguiente, escritos <i>al revés</i>.
+La historia es un cuento de monstruos.
+<br><br></ul><!183>
+<!-- *****183*****}}} -->
+<!-- *****182*****{{{ -->
+<a id="182" href="#last" onclick="toggle('eructo_182')"><h3>182</h3></a>
+              	<ul id="eructo_182" style="display:none"><br>
+No hay empresas, sino empresa, porque todas son presa de la misma empresa impresa.
+<br></ul><!eructo_182>
+<!-- *****182*****}}} -->
+<!-- *****181*****{{{ -->
+<a id="181" href="#last" onclick="toggle('eructo_181')"><h3>181</h3></a>
+              	<ul id="eructo_181" style="display:none"><br>
+El perfeccionismo no lleva a la perfección, sino a la parálisis.
+Algo desprovisto de defectos no se convierte en virtuoso, 
+de la misma forma que la ausencia de disonancias no
+puede ser más que silencio.
+El perfeccionista es un destructor de defectos, nunca un constructor de virtud.
+La virtud es una construcción llena de defectos y de efecto.
+Se sostiene en pie, brilla, aún plagada de fracturas, asimetrías y errores.
+Libre de error solo existe la nada.
+El perfeccionista, buscando la ausencia de muerte, sólo encuentra el suicidio.
+Una vez que no hay nada que perfilar, su obra está acabada,
+ya que nunca la empezó. 
+
+<br></ul><!eructo_181>
+<!-- *****181*****}}} -->
 <!-- *****180*****{{{ -->
 <a id="180" href="#last" onclick="toggle('eructo_180')"><h3>180</h3></a>
               	<ul id="eructo_180" style="display:none"><br>
@@ -414,7 +489,7 @@ Un aplauso para los que todavían saben no aplaudir, por favor.
 Los arquitectos contemporáneos tienen que estar muy agradecidos a la gravitación, pues los obliga a estar
 con los pies en la tierra y también a que sus obras, por esperpénticas que sean, se aguanten de pie por sí solas.
 En cambio, en la música, la pintura y otras artes más livianas, al carecer del peso en el espacio, caen en la gravedad del tiempo 
-y, por muy contemporáneas que sean, vuelven una y otra a la prehistoria. 
+y, por muy contemporáneas que sean, vuelven una y otra vez a la prehistoria. 
 
 <br></ul><!eructo_141>
 <!-- *****141*****}}} -->
