--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@ you@aleix_alva:~$
 <!*****importunate permutation**********{{{>
 <h2><a id="id_short" href="index.html#last" onclick="toggle('short')">importunate permutation</a></h2>
 <ul id="short" style="display:none">
+mi papásito lindo<br><br>
+paràsits i maràsits<br><br>
+do me a flavor, please<br><br>
 Calfred Hitchcock<br><br>
 mathematics for the asthmatic me<br><br>
 me sube la tremperatura<br><br>
