--- a/files/eructos_filosoficos.html
+++ b/files/eructos_filosoficos.html
@@ -54,15 +54,15 @@ A la frases escritas en los libros les pido que sean perpendiculares para clavar
 <br></ul><!eructo_184>
 <!-- *****184*****}}} -->
 <!-- *****183*****{{{ -->
-<h3><a href="#last" onclick="toggle('eructo_183')">183</a></h3>
-<ul id="eructo_183" style="display:none"><!-- 183 --><br><br>
+<a id="183" href="#last" onclick="toggle('eructo_183')"><h3>183</h3></a>
+              	<ul id="eructo_183" style="display:none"><br>
 Los monstruos son seres amorfos, poderosos, a veces grandes, a veces pequeños,
 pero siempre con una enorme escasez de sentimientos.
 Los cuentos en los que hay monstruos están escritos
 por ellos mismos.
 Los cuentos de monstruos están, por consiguiente, escritos <i>al revés</i>.
 La historia es un cuento de monstruos.
-<br><br></ul><!183>
+<br></ul><!eructo_183>
 <!-- *****183*****}}} -->
 <!-- *****182*****{{{ -->
 <a id="182" href="#last" onclick="toggle('eructo_182')"><h3>182</h3></a>
@@ -79,7 +79,7 @@ de la misma forma que la ausencia de disonancias no
 puede ser más que silencio.
 El perfeccionista es un destructor de defectos, nunca un constructor de virtud.
 La virtud es una construcción llena de defectos y de efecto.
-Se sostiene en pie, brilla, aún plagada de fracturas, asimetrías y errores.
+Se sostiene en pie, brilla, aun plagada de fracturas, asimetrías y errores.
 Libre de error solo existe la nada.
 El perfeccionista, buscando la ausencia de muerte, sólo encuentra el suicidio.
 Una vez que no hay nada que perfilar, su obra está acabada,
@@ -1106,7 +1106,7 @@ Morir es cortar por lo sano.
               	<ul id="eructo_91" style="display:none"><br>
 
 El cadáver es la cosa más inquietante que existe. Sabes que quien fuera su propietario ya ha muerto, pero
-no estás seguro de que no pueda todavía escuchar y sentir. Sabes que permanecerá más o menos quieto pero aún así
+no estás seguro de que no pueda todavía escuchar y sentir. Sabes que permanecerá más o menos quieto pero aun así
 parece que pueda echar a andar en cualquier momento. La muerte es irreversible pero el cadáver invita a especular
 sobre lo contrario. Todavía sus células están ahí, su forma casi intacta, su memoria almacenada físicamente. Si
 despertara seguiría siendo el mismo. El cuerpo presente puede ser todavía exhuberante. Puede todavía ser
@@ -1224,7 +1224,7 @@ Una banda sonora está escrita para una escena determinada, una acción, un sent
 imposible además de indeseable que esa música solo sea capaz de estimular esas imágenes de la forma que el director
 pretendía. A menudo el abanico de matices  ofrecido es tan amplio que nadie en la sala de montaje podía
 haber predicho la magia que iba a producirse luego. Hasta aquí, la música es como un poema, que siempre
-puede ir más allá del significado que el poeta le otorgó. Pero el arte abstracto por excelencia va aún más allá.
+puede ir más allá del significado que el poeta le otorgó. Pero el arte abstracto por excelencia va aun más allá.
 El poema es al fin y al cabo un esclavo de las palabras y sus significados. Pero la música es capaz de
 impregnar todo lo que le rodea, más allá de la partitura, de la película, del altavoz... Uno puede calzarse
 unas zapatillas y unos buenos auriculares y lanzarse a un paseo donde los pensamientos vuelen potenciados
@@ -1559,7 +1559,7 @@ Los vampiros solo toman un poco de sangre. Beben lo que necesitan y dejan con vi
 <a id="id_eructo_66" href="#last" onclick="toggle('eructo_66')"><h3>066</h3></a>
               	<ul id="eructo_66" style="display:none"><br>
 
-Es muy difícil hablar con propiedad de Nietzsche. Su obra y vida es algo mucho más complejo que cualquier cálculo de relatividad general. Sin embargo los profesores de instituto no hablan alegremente del tensor de Ricci. Tampoco ves en el cine películas sobre geometría diferencial haciéndola parecer euclidiana. ¿No sería ridículo? Pues eso es lo que hacen con Nietzsche: hablar mucho de él con un gran desconocimiento, el cual puede seguir ahí a pesar de haber leído su obra completa diez veces. Tras su célebre y poblado bigote se esconde la mente más brillante que nunca ha habido. A su lado Einstein es puro parvulario y Marx un ser unicelular. Pero eso no quiere decir que haya que dejar a Nietzsche en manos de los que se doctoren en él. El filósofo de Leipzig no sirve para la academia, y menos aún para los colegios de secundaria. Si quieres conocerlo debes hacer caso únicamente de lo que él mismo te diga en sus propios libros, y aún así tiene la gran habilidad de engañarte, porque en vez de usar tensores usa palabras, y en vez de utilizar un lenguaje arcaico para distanciarse te seduce con una prosa fácil y directa. Eso provoca que se le acerque todo el mundo, que toda la chusma se atreva a hablar de él e interpretarlo. No tenía a su disposición el pathos de la ecuación abstracta y consciente de ello desarrolló el pathos del falso entendimiento. Mientras el universo se dejaba explicar por relaciones geométricas, el espíritu, universo tan vasto, lejano y misterioso como el otro, o más, siempre se ha resistido a ello. Nietzsche se aproximó a él de una forma muy especial: dirigiéndose a ti directamente, sin intermediarios profesionales ni académicos marmóreos. Nietzsche te pide siempre una cita a solas con él. Te lo pone fácil de entrada. Pero cuidado, porque sin el artificio del tecnicismo tratará de reducir tu sentido común a añicos. Para que lo recompongas haciendo otro mejor. Repito, casi nadie puede hablar con propiedad de Nietzsche, porque Nietzsche es, en principio, propiedad de todos. Así lo quiso él, para poder percurtir en todas las almas y seleccionar aquellas que resonaran con mejor timbre, demoliendo a las que se oyeran huecas. La vida y la obra de Nietzsche es tan compleja porque en ellas no basta el entendimiento. Da igual cuánto gastes tus codos en sus libros. Lo que importa en ella es hasta dónde eres capaz de abrir tus entrañas para dejártelas remover, examinar, ridiculizar, reorganizar...
+Es muy difícil hablar con propiedad de Nietzsche. Su obra y vida es algo mucho más complejo que cualquier cálculo de relatividad general. Sin embargo los profesores de instituto no hablan alegremente del tensor de Ricci. Tampoco ves en el cine películas sobre geometría diferencial haciéndola parecer euclidiana. ¿No sería ridículo? Pues eso es lo que hacen con Nietzsche: hablar mucho de él con un gran desconocimiento, el cual puede seguir ahí a pesar de haber leído su obra completa diez veces. Tras su célebre y poblado bigote se esconde la mente más brillante que nunca ha habido. A su lado Einstein es puro parvulario y Marx un ser unicelular. Pero eso no quiere decir que haya que dejar a Nietzsche en manos de los que se doctoren en él. El filósofo de Leipzig no sirve para la academia, y menos aún para los colegios de secundaria. Si quieres conocerlo debes hacer caso únicamente de lo que él mismo te diga en sus propios libros, y aun así tiene la gran habilidad de engañarte, porque en vez de usar tensores usa palabras, y en vez de utilizar un lenguaje arcaico para distanciarse te seduce con una prosa fácil y directa. Eso provoca que se le acerque todo el mundo, que toda la chusma se atreva a hablar de él e interpretarlo. No tenía a su disposición el pathos de la ecuación abstracta y consciente de ello desarrolló el pathos del falso entendimiento. Mientras el universo se dejaba explicar por relaciones geométricas, el espíritu, universo tan vasto, lejano y misterioso como el otro, o más, siempre se ha resistido a ello. Nietzsche se aproximó a él de una forma muy especial: dirigiéndose a ti directamente, sin intermediarios profesionales ni académicos marmóreos. Nietzsche te pide siempre una cita a solas con él. Te lo pone fácil de entrada. Pero cuidado, porque sin el artificio del tecnicismo tratará de reducir tu sentido común a añicos. Para que lo recompongas haciendo otro mejor. Repito, casi nadie puede hablar con propiedad de Nietzsche, porque Nietzsche es, en principio, propiedad de todos. Así lo quiso él, para poder percurtir en todas las almas y seleccionar aquellas que resonaran con mejor timbre, demoliendo a las que se oyeran huecas. La vida y la obra de Nietzsche es tan compleja porque en ellas no basta el entendimiento. Da igual cuánto gastes tus codos en sus libros. Lo que importa en ella es hasta dónde eres capaz de abrir tus entrañas para dejártelas remover, examinar, ridiculizar, reorganizar...
 
 <br></ul><!eructo_66>
 <!-- *****66*****}}} -->
