--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@ you@aleix_alva:~$
 <!*****importunate permutation**********{{{>
 <h2><a id="id_short" href="index.html#last" onclick="toggle('short')">importunate permutation</a></h2>
 <ul id="short" style="display:none">
+Camarón, el Monarca<br><br>
+The pets fart. Fart de pets.<br><br>
+tetris triste<br><br>
 Don King Kong<br><br>
 h interchalada<br><br>
 mi papásito lindo<br><br>
@@ -149,7 +152,7 @@ prender y pagar, aprender y apagar <br><br>
 meditacción<br><br>Fuga de becerros<br><br>fuerza azufre<br><br>City. Love. Velocity.<br><br>calzado alzado<br><br>libre ría<br><br>el juicio de perfumar<br><br>
 bella y bellaco<br><br>cara col<br><br>robas sabor<br><br>sanar ranas<br><br>pagès a la gespa<br><br>educar cuerda<br><br>
 silencio sin cielo<br><br>adiós, diosa<br><br>trol con control<br><br>ávida dádiva<br><br>la mari posa de mariposa<br><br>
-una idea lista<br><br>severo revés<br><br>eptagerado<br><br>cuatristeza<br><br>
+una idea lista<br><br>severo revés<br><br>eptagerado<br><br>cuatristeza<br><br>dodecadente<br><br>Bachatas de Kant<br><br>
 contra tradiciones con contradicciones<br><br>
 romance en menorca<br><br>laúd dual<br><br>manage man age<br><br>lámina animal<br><br>aula J<br><br>damnmad<br><br>luzazul<br><br>research, H careers<br><br>
 
