--- a/files/books.html
+++ b/files/books.html
@@ -17,7 +17,8 @@
 <h4><a href="#last" onclick="toggle('books_2020')">2020</a></h4>
 <ul id="books_2020" style="display:none"><!2020><br><br>
 <!-- books 2020 code*****}}} -->
--<font size="4"><i> Bajo los cielos de Asia</i></font>, by Iñaki Ochoa de Olza<br><br>
+-<font size="4"><i> Días extraños</i></font>, de Ray Loriga<br><br>
+-<font size="4"><i> Bajo los cielos de Asia</i></font>, de Iñaki Ochoa de Olza<br><br>
 -<font size="4"><i> The Andromeda Strain</i></font>, by Michael Crichton<br><br>
 -<font size="4"><i> Beethoven</i></font>, de Maynard Solomon<br><br>
 -<font size="4"><i> Spooky Action at a Distance</i></font>, by George Musser<br><br>
