--- a/files/books.html
+++ b/files/books.html
@@ -17,6 +17,7 @@
 <h4><a href="#last" onclick="toggle('books_2020')">2020</a></h4>
 <ul id="books_2020" style="display:none"><!2020><br><br>
 <!-- books 2020 code*****}}} -->
+-<font size="4"><i> Pet Sematary</i></font>, by Stephen King<br><br>
 -<font size="4"><i> Días extraños</i></font>, de Ray Loriga<br><br>
 -<font size="4"><i> Bajo los cielos de Asia</i></font>, de Iñaki Ochoa de Olza<br><br>
 -<font size="4"><i> The Andromeda Strain</i></font>, by Michael Crichton<br><br>
